frontend/css/main.css
:root {
    --base-dark: #413e40;
    --base-light: #e5d1c4;
}
body {
    font-family: 'Noto Serif', serif;
    color: var(--base-dark);
    background-color: var(--base-light);
    min-height: 100vh!important;
}
figure > img {
    max-width: 100%;
    height: auto;
}
a.blog-link-card{
    color:var(--base-light)
}
.privacy-link{
    color:var(--base-light)
}
.site-card
{
    background-color: var(--base-dark);
    color: var(--base-light);
    border:none;
    display: flex;
    align-items: center;
    place-content: center
}
.card-background, .single-hero-background
{
    background-repeat: no-repeat!important;
    background-size: cover!important;
    background-position:center!important;   
}
.single-menu-side-fixed{
    position: fixed;
}
.single-post-contents, .post-card-excerpt{
    text-align: justify;
    line-height: 1.618rem;
    word-spacing: 0.309rem;
}
@media (max-width: 991px) {
    .single-menu-side-fixed{
        position: inherit;
    }
}
a {
    color: var(--base-dark);
    text-decoration: none;
}
input{
    text-align:center;
    border: 0;
    background-color: transparent;
    color: var(--base-dark)
}
.single-hero-background{
    min-height: 300px
}
.text-with-bg-text{
    background-color: rgba(0, 0, 0, 0.61);
    color:var(--base-light)
}
input:not([type=submit])
{
    background-color: white;
    border-radius: 3px;
    border: 2px solid #ccc!important
}
.card-row > 
input[type=submit]{
    border: 2px solid #ccc!important;
    border-radius: 3px;
}
.outline
{
    border: 2px solid var(--base-dark)
}
.post-card-outline{
    height: 25rem;
}
.single-site-card
{
    height: 5.5rem;
    height: 8.5rem;
}
.post-card-container
{
    text-align: center;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-evenly;
}

div.footer{
    position:sticky;
    bottom: 0;
    background-color: var(--base-dark);
    color: var(--base-light);
}
footer{
    position: sticky;
    bottom: 0;
    text-align: center;
    width:100%
}

